[gd_scene load_steps=2 format=3 uid="uid://dfw07hfl3c3p0"]

[ext_resource type="Script" path="res://Components/Interact/InteractComponent.gd" id="1_2oi3f"]

[node name="InteractComponent" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1_2oi3f")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
